--- a/app/composer.json
+++ b/app/composer.json
@@ -8,8 +8,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "6.0.*",
+        "symfony/css-selector": "6.0.*",
         "symfony/dotenv": "6.0.*",
-        "symfony/css-selector": "^5.3",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
         "symfony/panther": "^2.0",
