load more posts + clean up

--- a/app/src/YamlData/InstagramUsernames.yaml
+++ b/app/src/YamlData/InstagramUsernames.yaml
@@ -1,3 +1,7 @@
+- cristiano
+- therock
+- arianagrande
+- beyonce
 - deadofwrite
 - inkandfable
 - true.living
@@ -63,9 +67,6 @@
 - sadgirlsclub
 - thetrendymood
 - imaginaryplanet
--
-- Cool Instagram Names
--
 - rainbowsalt
 - idreamofunicorns
 - fuckyoumakeart
@@ -137,9 +138,6 @@
 - blackownedeverything
 - carleyscamera
 - theblacklinen
--
-- Cute Instagram Names
--
 - alwaysaugst
 - paperinashes
 - spellboundead
