--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -2,8 +2,8 @@ FROM php:8.0-fpm
 
 # PHP extensions
 RUN apt update \
-    && apt install -y zlib1g-dev g++ git libicu-dev wget zip libzip-dev zip \
-    && docker-php-ext-install intl opcache pdo pdo_mysql \
+    && apt install -y zlib1g-dev g++ git libicu-dev wget zip libzip-dev zip libffi-dev libgmp-dev libssl-dev vim \
+    && docker-php-ext-install intl opcache mysqli pdo pdo_mysql \
     && pecl install apcu \
     && docker-php-ext-enable apcu \
     && docker-php-ext-configure zip \
