--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 /.idea
 /mysql/
-/app/.env.local
+/app/.env
 /app/.env.local.php
 /app/.env.*.local
 /app/config/secrets/prod/prod.decrypt.private.php
