--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 # Source: https://www.twilio.com/blog/get-started-docker-symfony
 services:
-  db:
+  mysql:
     container_name: db
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
