--- a/app/composer.json
+++ b/app/composer.json
@@ -18,7 +18,11 @@
         "symfony/panther": "^2.0",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
-        "symfony/yaml": "6.0.*"
+        "symfony/twig-bundle": "6.0.*",
+        "symfony/ux-live-component": "^2.2",
+        "symfony/yaml": "6.0.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
