--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@
 /app/.env.*.local
 /app/config/secrets/prod/prod.decrypt.private.php
 /app/public/bundles/
-/app/images/*
+/app/public/data/images/*
 /app/var/
 /app/vendor/
