--- a/app/composer.json
+++ b/app/composer.json
@@ -14,6 +14,7 @@
         "symfony/css-selector": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/panther": "^2.0",
         "symfony/proxy-manager-bridge": "6.0.*",
