--- a/app/composer.json
+++ b/app/composer.json
@@ -22,6 +22,7 @@
         "symfony/twig-bundle": "6.0.*",
         "symfony/ux-live-component": "^2.1",
         "symfony/ux-twig-component": "^2.2",
+        "symfony/validator": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
