--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -7,7 +7,10 @@ RUN apt update \
     && pecl install apcu \
     && docker-php-ext-enable apcu \
     && docker-php-ext-configure zip \
-    && docker-php-ext-install zip
+    && docker-php-ext-install zip \
+    && docker-php-ext-install bcmath \
+    && docker-php-ext-install pcntl \
+    && docker-php-ext-install sockets
 
 
 # Install panther driver for firefox
