--- a/app/composer.json
+++ b/app/composer.json
@@ -5,14 +5,20 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.0.2",
+        "ext-bcmath": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-sockets": "*",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
+        "php-amqplib/php-amqplib": "^2.6",
+        "symfony/config": "^4.3|^5.0",
         "symfony/console": "6.0.*",
         "symfony/css-selector": "6.0.*",
+        "symfony/dependency-injection": "^4.3|^5.0",
         "symfony/dotenv": "6.0.*",
+        "symfony/event-dispatcher": "^4.3|^5.0",
         "symfony/flex": "^2",
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
