--- a/app/composer.json
+++ b/app/composer.json
@@ -12,9 +12,10 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
-        "php-amqplib/php-amqplib": "^2.6",
+        "php-amqplib/php-amqplib": "3.2.0",
+        "php-amqplib/rabbitmq-bundle": "v2.11.0",
         "symfony/config": "^4.3|^5.0",
-        "symfony/console": "6.0.*",
+        "symfony/console": "^4.3|^5.0 ",
         "symfony/css-selector": "6.0.*",
         "symfony/dependency-injection": "^4.3|^5.0",
         "symfony/dotenv": "6.0.*",
@@ -30,7 +31,7 @@
         "symfony/ux-twig-component": "^2.2",
         "symfony/validator": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.14",
-        "symfony/yaml": "6.0.*",
+        "symfony/yaml": "^4.3|^5.0",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
