--- a/app/composer.json
+++ b/app/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.12",
         "php-amqplib/php-amqplib": "3.2.0",
         "php-amqplib/rabbitmq-bundle": "v2.11.0",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/config": "^4.3|^5.0",
         "symfony/console": "^4.3|^5.0 ",
         "symfony/css-selector": "6.0.*",
