--- a/app/composer.json
+++ b/app/composer.json
@@ -15,6 +15,7 @@
         "php-amqplib/php-amqplib": "3.2.0",
         "php-amqplib/rabbitmq-bundle": "v2.11.0",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/amqp-messenger": "6.0.*",
         "symfony/config": "^4.3|^5.0",
         "symfony/console": "^4.3|^5.0 ",
         "symfony/css-selector": "6.0.*",
@@ -24,6 +25,7 @@
         "symfony/flex": "^2",
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/messenger": "6.0.*",
         "symfony/panther": "^2.0",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
