dockerfile clean up

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -2,20 +2,35 @@ FROM php:8.0-fpm
 
 # PHP extensions
 RUN apt update \
-    && apt install -y zlib1g-dev curl g++ git libicu-dev wget zip libzip-dev zip libffi-dev librabbitmq-dev libssh-dev libgmp-dev libssl-dev rabbitmq-c-dev vim \
+    && apt install -y \
+        zlib1g-dev \
+        libicu-dev \
+        libffi-dev \
+        librabbitmq-dev \
+        libssh-dev \
+        libgmp-dev \
+        libssl-dev \
+        libzip-dev \
+        curl \
+        g++ \
+        git \
+        wget \
+        zip \
+        vim \
+        cmake \
     && docker-php-ext-configure zip \
     && docker-php-ext-install zip \
-    && docker-php-ext-install bcmath \
-    && docker-php-ext-install pcntl \
-    && docker-php-ext-install sockets \
     && docker-php-ext-install intl \
     && docker-php-ext-install opcache \
     && docker-php-ext-install pdo \
-    && docker-php-ext-install sockets \
     && docker-php-ext-install pdo_mysql \
+    && docker-php-ext-install mysqli \
+    && docker-php-ext-install bcmath \
+    && docker-php-ext-install pcntl \
+    && docker-php-ext-install sockets \
     && pecl install apcu \
-    && pecl install amqp \
     && docker-php-ext-enable apcu \
+    && pecl install amqp \
     && docker-php-ext-enable amqp
 
 
