rabbitmq 2 test docker fix | PAIN

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,12 @@ services:
 
   rabbitmq:
     container_name: rabbitmq
+    hostname: rabbitmq
+    environment:
+      RABBITMQ_ERLANG_COOKIE: "SWQOKODSQALRPCLNMEQG"
+      RABBITMQ_DEFAULT_USER: "rabbitmq"
+      RABBITMQ_DEFAULT_PASS: "rabbitmq"
+      RABBITMQ_DEFAULT_VHOST: "/"
     build:
       context: ./rabbitmq
     ports:
